# scalarc

./: Cargo.toml  README.md
editor/vscode/: package.json
editor/vscode/src/: extension.ts
sample/: .gitignore  build.sbt
sample/src/main/scala/: Foo.scala  Main.scala
scalarc-analysis/: Cargo.toml
scalarc-analysis/src/: completion.rs  database.rs  diagnostic.rs  highlight.rs  lib.rs
scalarc-analysis/src/completion/: field.rs  mod.rs  top_level.rs
scalarc-analysis/src/tests/: goto_definition.rs  mod.rs
scalarc-ast/: Cargo.toml
scalarc-ast/src/: lib.rs
scalarc-bsp/: Cargo.toml
scalarc-bsp/src/: client.rs  discovery.rs  lib.rs  types.rs
scalarc-build/: Cargo.toml  scala.ungram
scalarc-build/src/: ast_src.rs  lib.rs  sourcegen.rs  sourcegen_ast.rs
scalarc-coursier/: Cargo.toml
scalarc-coursier/src/: lib.rs
scalarc-hir/: Cargo.toml
scalarc-hir/src/: analysis.rs  ast.rs  body.rs  lib.rs  lower.rs  name.rs  scope.rs  source_map.rs  tree.rs  types.rs
scalarc-hir/src/ast/: expr.rs  mod.rs  source_map.rs
scalarc-hir/src/hir/: def.rs  expr.rs  lower.rs  mod.rs  source_map.rs
scalarc-hir/src/lower/: mod.rs
scalarc-hir/src/tests/: def.rs  incremental.rs  ministd.scala  mod.rs  scope.rs  types.rs
scalarc-lsp/: Cargo.toml
scalarc-lsp/src/: files.rs  global.rs  info.rs  main.rs  progress.rs  search.rs
scalarc-lsp/src/handler/: bsp_notification.rs  bsp_response.rs  mod.rs  notification.rs  request.rs
scalarc-parser/: Cargo.toml  build.rs
scalarc-parser-base/: Cargo.toml
scalarc-parser-base/src/: format.rs  lib.rs
scalarc-parser/src/: format.rs  lib-old.rs  lib.rs  main.rs  syntax.rs  token.rs
scalarc-parser/src/grammar/: entry_point.rs  expr.rs  item.rs  items.rs  mod.rs  pattern.rs  type_expr.rs
scalarc-parser/src/syntax_kind/: mod.rs
scalarc-parser/src/tests/: inline.rs  mod.rs
scalarc-parser/src/tests/syntax/: expr.rs  item.rs  mod.rs  pattern.rs  std_stuff.rs  type_expr.rs
scalarc-source/: Cargo.toml
scalarc-source/src/: lib.rs  source_root.rs
scalarc-syntax/: Cargo.toml  build.rs
scalarc-syntax/src/: error.rs  lib.rs  node.rs  parse.rs
scalarc-syntax/src/ast/: ext.rs  mod.rs
scalarc-syntax/src/tests/: mod.rs  sourcegen.rs  sourcegen_ast.rs
scalarc-test/: Cargo.toml
scalarc-test/src/: lib.rs
scalarc-typer/: Cargo.toml
