[workspace]
resolver = "2"
members = [
  "scalarc-ast",
  "scalarc-build",
  "scalarc-syntax",
  "scalarc-parser",
  "scalarc-typer",
  "scalarc-analysis",
  "scalarc-lsp",
  "scalarc-test",
]

[workspace.dependencies]
scalarc-parser = { path = "scalarc-parser" }
scalarc-syntax = { path = "scalarc-syntax" }
scalarc-build = { path = "scalarc-build" }
scalarc-analysis = { path = "scalarc-analysis" }
scalarc-test = { path = "scalarc-test" }
