[workspace]
resolver = "2"
members = [
  "scalarc-ast",
  "scalarc-build",
  "scalarc-parser",
  "scalarc-syntax",
  "scalarc-source",
  "scalarc-hir",
  "scalarc-typer",
  "scalarc-analysis",
  "scalarc-lsp",
  "scalarc-test",
]

[workspace.dependencies]
scalarc-build = { path = "scalarc-build" }
scalarc-parser = { path = "scalarc-parser" }
scalarc-syntax = { path = "scalarc-syntax" }
scalarc-source = { path = "scalarc-source" }
scalarc-hir = { path = "scalarc-hir" }
scalarc-analysis = { path = "scalarc-analysis" }
scalarc-test = { path = "scalarc-test" }
