[package]
name = "scalarc-analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.20"
salsa = "0.17.0-pre.2"

scalarc-syntax.workspace = true
scalarc-source.workspace = true
scalarc-parser.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
