[package]
name = "scalarc-analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.20"
la-arena = "0.3.1"
salsa = "0.17.0-pre.2"

scalarc-syntax.workspace = true
scalarc-source.workspace = true
scalarc-hir.workspace = true
scalarc-parser.workspace = true
line-index = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
scalarc-test.workspace = true
