[package]
name = "scalarc-bsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
serde_repr = "0.1"
log = "0.4.20"
lsp-server = "0.7.6"
lsp-types = "0.95.0"
serde_json = "1.0.113"
thiserror = "1.0.56"
crossbeam-channel = "0.5.11"
