[package]
name = "scalarc-hir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
la-arena = "0.3.1"
salsa = "0.17.0-pre.2"

scalarc-source.workspace = true
scalarc-syntax.workspace = true
url = "2.5.0"

[dev-dependencies]
scalarc-test.workspace = true
