[package]
name = "scalarc-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

default-run = "scalarc-lsp"

[dependencies]
crossbeam-channel = "0.5.11"
log = "0.4.20"
lsp-server = "0.7.6"
lsp-types = "0.95.0"
serde_json = "1.0.111"
simple-logging = "2.0.2"
parking_lot = "0.12.1"

scalarc-analysis.workspace = true
scalarc-hir.workspace = true
scalarc-source.workspace = true
scalarc-syntax.workspace = true
scalarc-bsp.workspace = true
la-arena = "0.3.1"
line-index = "0.1.1"
