[package]
name = "scalarc-syntax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
rowan = "0.15.15"
thiserror = "1.0.56"

[dev-dependencies]
itertools = "0.12.0"
expect-test = "1.4.0"
proc-macro2 = "1.0.47"
quote = "1.0.20"
ungrammar = "1.16.1"
xshell = "0.2.5"
