[package]
name = "scalarc-syntax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
rowan = "0.15.15"
thiserror = "1.0.56"
scalarc-parser.workspace = true

[build-dependencies]
scalarc-build.workspace = true
